--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
